force-app/main/default/objects/AV_HeaderCustomActivity__c/AV_HeaderCustomActivity__c.object-meta.xml
<CustomObject>
    <description>Objeto que contiene un duplicado con la información mínima de las tareas existentes en Activity. 
Necesario para cumplir con la funcionalidad N:M entre tareas y oportunidades requerida por negocio.</description>
    <label>Cabecera-Tarea</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Cabecera-Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cabecera-Tarea</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>