force-app/main/default/objects/AV_HeaderCustomActivity__c/fields/AV_UrlTeams__c.field-meta.xml
<CustomField>
    <fullName>AV_UrlTeams__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>URL Teams</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>