force-app/main/default/objects/AV_HeaderCustomActivity__c/fields/IDTask__c.field-meta.xml
<CustomField>
    <fullName>IDTask__c</fullName>
    <description>id de tarea</description>
    <encryptionScheme>None</encryptionScheme>
    <label>IDTask</label>
    <length>255</length>
    <type>Text</type>
</CustomField>