force-app/main/default/objects/AV_HeaderCustomActivity__c/recordTypes/AV_CabeceraTarea.recordType-meta.xml
<RecordType>
    <fullName>AV_CabeceraTarea</fullName>
    <active>true</active>
    <label>Cabecera-Tarea</label>
</RecordType>